--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Project website
 <html>
 <head>
     <meta charset="utf-8">
-    <title>IL MIO PRIMO WEBSITE</title>
+    <title>MI PIACI PROPRIO TANTO</title>
     <style>
         body {
             font-family: sans-serif;
